--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "@tarojs/components": "^4.1.3",
-    "@tarojs/runtime": "^4.1.3",
+    "@tarojs/components": "4.0.1",
+    "@tarojs/runtime": "4.0.1",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -14,16 +14,21 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev:weapp": "taro build --type weapp"
+    "dev:weapp": "taro build --type weapp --watch",
+    "build:weapp": "taro build --type weapp"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@tarojs/cli": "^4.1.3",
-    "@tarojs/plugin-framework-react": "^4.1.3",
-    "@tarojs/plugin-platform-weapp": "^4.1.3",
+    "@tarojs/cli": "4.0.1",
+    "@tarojs/components": "4.0.1",
+    "@tarojs/plugin-framework-react": "4.0.1",
+    "@tarojs/plugin-platform-weapp": "4.0.1",
+    "@tarojs/runtime": "4.0.1",
+    "@tarojs/service": "4.0.1",
+    "@tarojs/webpack-runner": "4.0.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
